<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- iphone_14___3 strings -->

    <string name="app_name">NoteApp</string>
    <string name="eventos">EVENTOS</string>
    <string name="notas">NOTAS</string>
    <string name="calcular">CALCULAR</string>
    <string name="usuario">USUARIO</string>
    <string name="volver">VOLVER</string>
    <string name="contraseña">CONTRASEÑA</string>
    <string name="nombre">NOMBRE</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="titulo">NoteApp</string>
    <string name="logo">logo</string>
    <string name="img_eventos">img eventos</string>
    <string name="img_notas">img notas</string>
    <string name="img_calcular">img calcular</string>
    <string name="img_salir">img salir</string>
    <string name="agregar_evento">AGREGAR EVENTO</string>
    <string name="agregar">AGREGAR</string>
    <string name="info">INFO</string>
    <string name="asunto">ASUNTO</string>
    <string name="dia">DIA</string>
    <string name="mes">MES</string>
    <string name="evento">EVENTO</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="agregar_materia">AGREGAR MATERIA</string>
    <string name="add">+</string>
    <string name="ac">AC</string>
    <string name="MAS">+</string>
    <string name="IGUAL">=</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="MENOS">-</string>
    <string name="PUNTO">.</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_8">8</string>
    <string name="DIV">/</string>
    <string name="SIGNO">+/-</string>
    <string name="PORCENTO">%</string>
    <string name="_7">7</string>
    <string name="DEL"><![CDATA[<-]]></string>
</resources>