<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37B192"
    tools:context=".Calculadora" >

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="509dp"
        android:background="@color/rellenable"
        android:backgroundTint="@color/rellenable"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/bt_ac"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/ac"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bt_signo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textview3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/SIGNO"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bt_porciento"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="214dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/PORCENTO"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="314dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/bt_div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/DIV"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="214dp"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp" >

            <TextView
                android:id="@+id/bt_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_9"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="314dp"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/x"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/bt_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_8"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/bt_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_7"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="220dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_4"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="220dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_5"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="214dp"
            android:layout_marginTop="220dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_6"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="314dp"
            android:layout_marginTop="220dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/MENOS"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="320dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="320dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="214dp"
            android:layout_marginTop="320dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp" >

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_3"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="314dp"
            android:layout_marginTop="320dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/MAS"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="420dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/DEL"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="420dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="214dp"
            android:layout_marginTop="420dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp" >

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/PUNTO"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="314dp"
            android:layout_marginTop="420dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/IGUAL"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>