<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/et_nombre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTintMode="add"
    android:foregroundTint="@color/_bg__iphone_14___3_ek2_color"
    android:foregroundTintMode="add"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rectangle_54_ek1_color"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="192dp"
            android:layout_height="68dp"
            android:layout_marginTop="50dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo">

            <EditText
                android:id="@+id/et_user"
                android:layout_width="239dp"
                android:layout_height="37dp"
                android:layout_marginBottom="2dp"
                android:background="@color/rectangle_54_ek1_color"
                android:ems="10"
                android:hint="@string/usuario"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="32sp"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView7">

            <EditText
                android:id="@+id/et_contraseña"
                android:layout_width="239dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:background="@color/rectangle_54_ek1_color"
                android:ems="10"
                android:hint="@string/contraseña"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="32sp"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_logo"
            app:srcCompat="@drawable/logo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView5">

            <Button
                android:id="@+id/bt_ingresar"
                android:layout_width="236dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:background="@color/rectangle_54_ek1_color"
                android:text="@string/ingresar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:strokeColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3">

            <Button
                android:id="@+id/bt_registrar"
                android:layout_width="236dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:background="@color/rectangle_54_ek1_color"
                android:text="@string/registrarse"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:cornerRadius="20dp" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>