<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__iphone_14___3_ek2_color"
    tools:context=".Notas">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView18"
        android:layout_width="367dp"
        android:layout_height="87dp"
        android:layout_marginTop="37dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_principal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/notas"
            android:textAlignment="center"

            android:textColor="@color/white"
            android:textSize="34sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView17"
        android:layout_width="382dp"
        android:layout_height="475dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/card_verde"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView18" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_materias"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_1"
        android:layout_width="159dp"
        android:layout_height="63dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/card_verde"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView17">

        <TextView

            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/agregar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_volver"
        android:layout_width="159dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="39dp"
        android:backgroundTint="@color/card_verde"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView17">

        <TextView
            android:id="@+id/tv_volver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/volver"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>